--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ ignition/deployments/chain-31337
 .obsidian/core-plugins.json
 .obsidian/workspace.json
 yarn.lock
+package-lock.json
+bun.lockb
+package-lock.json
+.gitignore
