--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
-    "deploy": "npx hardhat run deploy.js --network web3qtest"
+    "deploy": "npx hardhat run deploy.ts --network web3qtest"
   },
   "repository": {
     "type": "git",
@@ -22,13 +22,23 @@
   },
   "homepage": "https://github.com/OutlawVoyage/OutlawVoyage#readme",
   "devDependencies": {
+    "@nomicfoundation/hardhat-ignition-viem": "^0.15.5",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.9",
+    "@nomicfoundation/hardhat-viem": "^2.0.3",
     "@openzeppelin/contracts": "^5.0.2",
+    "@types/chai": "^4.3.17",
+    "@types/chai-as-promised": "^7.1.8",
+    "@types/mocha": "^10.0.7",
+    "chai": "^4.5.0",
     "dotenv": "^16.4.5",
     "hardhat": "^2.22.7",
+    "hardhat-gas-reporter": "^1.0.10",
+    "solidity-coverage": "^0.8.12",
     "ts-node": "^10.9.2",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "viem": "^2.18.8"
   },
   "dependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
