--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "viem": "2.x",
     "wagmi": "^2.12.1"
   },
